<resources>
    <string name="app_name">Weather</string>
    <string name="time_card">10 am</string>
    <string name="temperature_card">15°</string>
    <string name="label_feels_like">Feels like</string>
    <string name="label_windy_speed">Windy</string>
    <string name="label_humidity">Humidity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_today">Today</string>
    <string name="label_visibility">Visibility</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_sunset">Sunset</string>
    <string name="today">Today</string>
    <string name="not_enabled_gps">You need to enable the GPS Tracker, else you can not get weather near your location</string>
    <string name="confirm_btn">OK</string>
    <string name="not_added_cities">No cities have been added yet</string>
    <string name="search_hint">Enter a city to find</string>
</resources>